[gd_scene load_steps=12 format=3 uid="uid://b4s3wenyg8wrs"]

[ext_resource type="Script" uid="uid://bpcluqkphkhrp" path="res://game.gd" id="1_fc0e3"]
[ext_resource type="Script" uid="uid://c4vf68rbxq658" path="res://camera_2d.gd" id="2_7jktm"]
[ext_resource type="Script" uid="uid://q8q8sbielo7j" path="res://unit_renderer.gd" id="2_ryrav"]
[ext_resource type="Script" uid="uid://bcp3gus4vjqtc" path="res://gui.gd" id="3_ryrav"]
[ext_resource type="Script" uid="uid://chxk5r6puaa35" path="res://TriangleControl.gd" id="4_eow3j"]
[ext_resource type="PackedScene" uid="uid://dcjg31qkj8607" path="res://main_menu.tscn" id="5_7jktm"]

[sub_resource type="Gradient" id="Gradient_0xm2m"]
colors = PackedColorArray(0.16, 0.12528, 0.1104, 1, 0.55, 0.55, 0.55, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_h2yge"]
noise_type = 0
frequency = 0.0015
fractal_octaves = 7
fractal_lacunarity = 3.0
fractal_gain = 0.6
domain_warp_enabled = true
domain_warp_type = 1
domain_warp_amplitude = 75.0
domain_warp_frequency = 0.027
domain_warp_fractal_type = 0
domain_warp_fractal_lacunarity = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_1bvp3"]
width = 2048
height = 2048
seamless = true
color_ramp = SubResource("Gradient_0xm2m")
noise = SubResource("FastNoiseLite_h2yge")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mycd"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_272bh"]
bg_color = Color(0, 0.540232, 0.953912, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_fc0e3")

[node name="Background" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(1024, 1024)
texture = SubResource("NoiseTexture2D_1bvp3")

[node name="UnitRenderer" type="Node2D" parent="."]
visible = false
z_index = 2
script = ExtResource("2_ryrav")

[node name="MultiMeshInstance2D" type="MultiMeshInstance2D" parent="UnitRenderer"]

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2_7jktm")

[node name="GUI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("3_ryrav")

[node name="MarginContainer" type="MarginContainer" parent="GUI/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/HUD/MarginContainer"]
layout_mode = 2

[node name="Row1" type="Control" parent="GUI/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="Player_energy" type="Label" parent="GUI/HUD/MarginContainer/VBoxContainer/Row1"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 106.0
offset_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Player energy"

[node name="Row2" type="Control" parent="GUI/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="Row3" type="Control" parent="GUI/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = 82.5
offset_right = 96.5
offset_bottom = 105.5
grow_horizontal = 2
grow_vertical = 2

[node name="Energy_prog" type="ProgressBar" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer/Control/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_7mycd")
theme_override_styles/fill = SubResource("StyleBoxFlat_272bh")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Energy" type="Label" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer/Control/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Unit Energy:"

[node name="Power" type="Label" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 413.0
offset_top = 94.0
offset_right = 502.0
offset_bottom = 117.0
size_flags_horizontal = 3
text = "Power"
horizontal_alignment = 1

[node name="Speed" type="Label" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 342.0
offset_top = 127.0
offset_right = 525.0
offset_bottom = 150.0
size_flags_horizontal = 3
text = "Speed"
horizontal_alignment = 1

[node name="Health" type="Label" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 319.0
offset_top = 155.0
offset_right = 502.0
offset_bottom = 178.0
size_flags_horizontal = 3
text = "Shield"
horizontal_alignment = 1

[node name="Transform_button" type="Button" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 154.0
offset_top = 130.0
offset_right = 337.0
offset_bottom = 161.0
text = "Transform"

[node name="Control2" type="Control" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1

[node name="TriCon" type="Control" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer/Control2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -148.0
offset_right = 70.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1, -1)
pivot_offset = Vector2(75, 75)
mouse_filter = 1
script = ExtResource("4_eow3j")
color_a = Color(0.5, 0.25, 0.25, 1)
color_b = Color(0.25, 0.5, 0.25, 1)
color_c = Color(0.25, 0.25, 0.5, 1)
metadata/_custom_type_script = "uid://chxk5r6puaa35"

[node name="Polygon2D" type="Polygon2D" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer/Control2/TriCon"]
show_behind_parent = true
color = Color(0.679435, 0.338055, 0.320599, 1)
polygon = PackedVector2Array(0, 0, 150, 0, 75, 130)
metadata/_edit_lock_ = true

[node name="Control3" type="Control" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Energy cost" type="Label" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer/Control3"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 201.0
offset_top = 170.0
offset_right = 290.0
offset_bottom = 193.0
size_flags_horizontal = 8
size_flags_vertical = 10
text = "Energy cost"

[node name="Build energy" type="HSlider" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer/Control3"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 191.0
offset_right = 487.0
offset_bottom = 207.0
size_flags_vertical = 10
min_value = 1.0
max_value = 100000.0
value = 1.0
exp_edit = true
rounded = true

[node name="Conduit" type="Button" parent="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer/Control3"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 296.0
offset_top = 126.0
offset_right = 479.0
offset_bottom = 157.0
size_flags_horizontal = 3
text = "Conduit"

[node name="Main menu" parent="GUI" instance=ExtResource("5_7jktm")]
visible = false

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://b74nujfyhp6qr")
spawn_path = NodePath("..")

[node name="Menu" type="CanvasLayer" parent="."]
visible = false

[connection signal="pressed" from="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer/Control/Transform_button" to="GUI/HUD" method="_on_transform_button_pressed"]
[connection signal="value_changed" from="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer/Control3/Build energy" to="GUI/HUD" method="_on_build_energy_value_changed"]
[connection signal="pressed" from="GUI/HUD/MarginContainer/VBoxContainer/Row3/HBoxContainer/Control3/Conduit" to="GUI/HUD" method="_on_conduit_pressed"]
